# My3DEngine

./: .gitignore  CMakeLists.txt  Readme.md  compileCode.sh  compileScript.sh  compileShader.sh  runGame.sh
assets/shaders/: fs_simple.sc  varying.def.sc  vs_simple.sc
src/: main.cpp
src/Engine/: Engine.h  Engine.mm  ShaderUtils.cpp  ShaderUtils.h
src/Engine/Renderer/: BasicPipeline.cpp  BasicPipeline.h
src/Engine/Utils/: MeshGen.cpp  MeshGen.h
src/Game/: DemoScene.cpp  DemoScene.h
